# deepwell

./: .gitignore  ACHIEVEMENT.md  BLACKWELL_OPTIMIZATION.md  BUILD_AND_TEST.sh  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION_FIX_SUMMARY.md  KERNEL_ARCHITECTURE.md  LICENSE  MANIFEST.in  PRODUCTION_PLAN.md  PRODUCTION_README.md  README.md  ROADMAP.md  benchmark_complete.py  benchmark_real.py  benchmark_v2.py  blackwell_benchmark_results.json  build_cutlass.sh  build_extension.sh  build_on_b200.sh  build_production.sh  celebrate.py  debug_benchmark.py  debug_kernel.py  install_cutlass.sh  pyproject.toml  pytest.ini  quick_test.py  rebuild_and_test.sh  rebuild_fixed.sh  rebuild_test.sh  run_blackwell_benchmark.sh  run_real_benchmark.sh  setup.py  setup.sh  setup_cutlass.sh  show_results.py  test.py  test_blackwell_dispatch.py  (+12 more)
benchmarks/: attn_microbench.py  benchmark.py  blackwell_cutlass_benchmark.py  blackwell_speedup.py  comprehensive_benchmark.py  torch_vs_deepwell.py
csrc/: blackwell_gemm_kernel.cu  blackwell_gemm_kernel_simple.cu  blackwell_gemm_production.cu  correct_gemm.cu  cutlass_kernels.cpp  cutlass_kernels.h  fmha_blackwell.cu  mxfp8_quantization.cu  python_bindings.cpp  tcgen05_gemm.cu
csrc/fmha_bridge_min/: CMakeLists.txt  fmha_bridge_min.cu
csrc/fmha_ext/: CMakeLists.txt  fmha_ext.cu
examples/: README.md  automatic_optimization_demo.py  automatic_optimization_prototype.py  simple_usage.py  test_kernels.py  train_moe.py
src/deepwell/: __init__.py  capture.py  compile.py  cutlass_kernels.py  engine.py  ir.py  optimized_engine.py  optimizer.py  probe.py
src/deepwell/kernels/: __init__.py  blackwell_production.py  cutlass_bindings.py  cutlass_blackwell.py  production_kernels.py  registry.py  tcgen05_ops.py  use_cutlass_directly.py
src/deepwell/precision/: __init__.py  policy.py
tests/: test_basic_api.py  test_capture.py  test_policy.py  test_probe.py  test_readme_snippets.py  test_training_api.py
