[project]
name = "deepwell"
version = "0.0.1"
description = "Train efficiently on Blackwell via low-precision kernels, planning, and MoE support."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "Viraat Das", email = "viraat@exla.ai" }
]
dependencies = [
  "torch>=2.0.0",
  "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepwell"]


