[project]
name = "deepwell"
version = "0.0.1"
description = "Train efficiently on Blackwell via low-precision kernels, planning, and MoE support."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Viraat Das", email = "viraat@exla.ai" }
]
dependencies = [
  "torch>=2.0.0",
  "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=22.0",
  "isort>=5.0",
]
cutlass = [
  "nvidia-cutlass>=3.5.0",
]

[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
  "torch>=2.0.0",
  "ninja",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deepwell"]
package-dir = {"" = "src"}


